添加招聘信息分享，数据从网络上爬取出来

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -123,6 +123,12 @@
 
         </activity>
 
+        <!--招聘网页详情页面-->
+        <activity
+            android:name="com.zuofa.summer.ui.WebViewActivity">
+
+        </activity>
+
 
     </application>
 
