--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,5 @@ dependencies {
     compile 'cc.dagger:photopicker:1.0'
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
     compile 'me.relex:photodraweeview:1.0.0'
-
+    compile 'org.jsoup:jsoup:1.10.2'
 }
