--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.zuofa.summer"
@@ -10,7 +10,18 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+        ndk {
+            abiFilters "armeabi-v7a", "x86"
+        }
     }
+
+    sourceSets {
+        main {
+            jni.srcDirs = []
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -51,4 +62,6 @@ dependencies {
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
     compile 'me.relex:photodraweeview:1.0.0'
     compile 'org.jsoup:jsoup:1.10.2'
+    compile project(':IMKit')
+    compile project(':IMLib')
 }
